--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url("birthday-bg.jpg");
+    background-image: url("images/birthday-bg.jpg");
     background-repeat: repeat-x;
     background-attachment: fixed;
 }
